<resources>
    <string name="app_name">CollegeBuddy</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="not_have_account">Not Registered?</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="password">Password</string>
    <string name="upload_image">Upload Image</string>
    <string name="full_name">Full Name</string>
    <string name="choose_branch">Select Branch</string>
    <string name="already_registered">Already Registered?</string>
    <string name="select_college">Select College</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_year">Select Year</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="chat">Chat</string>
    <string name="write_answer">Click to view answers</string>
    <string name="ask_question">Ask Your Question</string>
    <string name="ask">ASK</string>
    <string name="write_question">Write Your Question Here!</string>
    <string name="otp_description">Please verify your phone!</string>
    <string name="college_buddy">CollegeBuddy</string>
    <string name="description">Description</string>
    <string name="year">B.Tech</string>
    <string name="edit_image">Edit Image</string>
    <string name="asked_on">asked on </string>
    <string name="post">Post</string>
    <string name="answer_anonymously">Answer anonymously</string>
    <string name="answered_on">answered on</string>
    <string name="question">Questions</string>
    <string name="question_anonymously">Ask anonymously</string>
    <string name="answers">Answers</string>
    <string name="uploads">Uploads</string>
    <string name="your_subjects">Your Subjects</string>
    <string name="your_library">Your Library</string>
    <string name="members">Members</string>
    <string name="you_joined">You joined</string>
    <string name="Discover">Discover</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with">or sign in using</string>
    <string name="fill_up_details">Fill up a few more details to get started</string>
    <string name="topic_of_interest">Topic of interest</string>
    <string name="update">Update</string>
    <string name="answer">Answer</string>
    <string name="welcome">Welcome,</string>
    <string name="view_subject">View Subject</string>
    <string name="resend_otp">Resend OTP</string>


    <string-array name="branch_drop_down">
        <item>CSE</item>
        <item>IT</item>
        <item>ECE</item>
        <item>EN</item>
        <item>ME</item>
        <item>CIVIL</item>
    </string-array>
    <string name="sign_up">Sign up</string>
    <string name="choose_year">Select Year</string>
    <string-array name="select_year_drop_down">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="topics">
        <item>GATE</item>
        <item>CAT</item>
        <item>RESEARCH</item>
        <item>JOB</item>
        <item>MACHINE LEARNING</item>
        <item>ROBOTICS</item>

    </string-array>

    <string name="choose_college">Select College</string>
    <string-array name="select_college_drop_down">
        <item>AKGEC , Ghaziabad</item>
        <item>ABESEC, Ghaziabad</item>
        <item>DTU, Delhi</item>
        <item>IIT, Delhi</item>
        <item>NSUT, New Delhi</item>
    </string-array>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="asked_questions">Asked Questions</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="branch">Branch</string>
</resources>
