<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single"
        android:id="@+id/bottom_navigation">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/cart"
            android:title="@string/downloads"
            android:icon="@drawable/ic_downloads"/>
        <item
            android:id="@+id/search"
            android:title="@string/explore"
            android:icon="@drawable/ic_explore_black_24dp"/>

        <item
            android:id="@+id/profile"
            android:title="Profile"
            android:icon="@drawable/ic_profile"/>

    </group>
</menu>