<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newLoginBackground">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/full_name"
            android:backgroundTint="#FFFFFF"
            android:paddingLeft="6dp"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        android:textColorHint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_Register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_phone_number"
            android:paddingLeft="6dp"
            android:inputType="number"
            android:backgroundTint="#FFFFFF"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        android:textColorHint="#FFFFFF">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:paddingLeft="6dp"
            android:backgroundTint="#FFFFFF"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner

        android:id="@+id/select_branch_drop_down"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:entries="@array/branch_drop_down"
        android:prompt="@string/choose_branch"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:background="@color/dropDown"/>

    <Spinner

        android:id="@+id/select_year_drop_down"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:entries="@array/select_year_drop_down"
        android:prompt="@string/choose_year"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/select_branch_drop_down"
        android:background="@color/dropDown"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_button"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/select_college_drop_down"
        app:layout_constraintStart_toStartOf="@+id/select_college_drop_down"
        app:layout_constraintTop_toBottomOf="@+id/select_year_drop_down" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:paddingTop="8dp"
        android:text="@string/already_registered"
        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <TextView
        android:textColor="#FFF"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:id="@+id/login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Spinner

        android:id="@+id/select_college_drop_down"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/dropDown"
        android:entries="@array/select_college_drop_down"
        android:prompt="@string/choose_college"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select_college"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select_branch"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/select_college_drop_down"
        app:layout_constraintTop_toBottomOf="@+id/select_college_drop_down" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/select_year"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>