<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_img"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        />

    <Spinner

        android:id="@+id/select_college_drop_down"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/select_college_drop_down"
        android:prompt="@string/choose_college"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_college"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/select_year"
        app:layout_constraintStart_toStartOf="@+id/select_college_drop_down"
        app:layout_constraintTop_toBottomOf="@+id/select_college_drop_down" />

    <Spinner

        android:id="@+id/select_year_drop_down"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/select_year_drop_down"
        android:prompt="@string/choose_year"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/select_branch"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <Spinner

        android:id="@+id/select_branch_drop_down"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/branch_drop_down"
        android:prompt="@string/choose_branch"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/select_year_drop_down" />

    <Spinner
        android:id="@+id/topics_drop_down"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/topics"
        app:layout_constraintStart_toStartOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Segoe UI"
        android:text="@string/fill_up_details"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/toolbar_main"
        app:layout_constraintTop_toTopOf="@+id/toolbar_main"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/topic_of_interest"
        app:layout_constraintStart_toStartOf="@+id/select_year_drop_down"
        app:layout_constraintTop_toBottomOf="@+id/select_year_drop_down" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/new_sign_up_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics_drop_down" />

</androidx.constraintlayout.widget.ConstraintLayout>