<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.askQuestionActivity"
    >

    <EditText
        android:id="@+id/enter_question_edit_text"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="8dp"
        android:background="@color/button"
        android:hint="@string/description"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ask_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ask_button"
        android:text="@string/ask"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/enter_question_edit_text"
        app:layout_constraintTop_toTopOf="@+id/question_anonymous_checkbox" />

    <CheckBox
        android:id="@+id/question_anonymous_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question_anonymously"
        android:onClick="askAnonymously"
        app:layout_constraintStart_toStartOf="@+id/enter_question_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/enter_question_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>