<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newLoginBackground">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_number_login_edit_text"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_phone_number"
            android:paddingLeft="6dp"
            android:backgroundTint="#FFFFFF"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_login"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/mobile_number_login_edit_text"
        app:layout_constraintStart_toStartOf="@+id/mobile_number_login_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/mobile_number_login_edit_text"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_edit_text"
            android:layout_width="match_parent"
            android:backgroundTint="#FFFFFF"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:paddingLeft="6dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="161dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/white" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input_login"
        />

        <TextView
        android:paddingTop="6dp"
        android:paddingLeft="6dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_have_account"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:paddingStart="6dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:textColor="#FFFFFF"
        android:paddingTop="6dp"
        android:paddingLeft="6dp"
        android:textSize="18sp"
        android:id="@+id/register_here_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:paddingStart="6dp"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>